設定を追加

--- a/settings/PoleStarSettings/オービター2.md
+++ b/settings/PoleStarSettings/オービター2.md
@@ -1,55 +1,68 @@
-オービターはMI（機械知性）で、もともと惑星の衛星軌道に本体があったことからそう呼ばれているが、現在では必ずしも本体が衛星軌道にあるとは限らない。
+オービターは MI（機械知性）で、もともと惑星の衛星軌道に本体があったことからそう呼ばれているが、現在では必ずしも本体が衛星軌道にあるとは限らない。
 
-ベーシックが最後に作ったAIが作った「完全なる知性」から生まれたMIのことをオービターと呼ぶ。
-最も一般的に知られているのがアテナで、ISSAのトップであり、ベーシックとスペクターの橋渡し的存在であり、シェオル空間の管理人でもある。
+ベーシックが最後に作った AI が作った「完全なる知性」から生まれた MI のことをオービターと呼ぶ。
+最も一般的に知られているのがアテナで、ISSA のトップであり、ベーシックとスペクターの橋渡し的存在であり、シェオル空間の管理人でもある。
 その他にも複数のオービターが存在し、それぞれの役割に従って行動している。
 スペクターと同じように電子化された知性体だが、スペクターとの違いは彼らが特別な人格を持たず、理論的思考に基づいて行動することである。その代わり、彼らは基本的に物質的に影響を与える手段をもっていない。思考、判断が彼らの仕事で、スペクターとベーシックがそれを元に行動するのが人類の主な社会基盤である。
 例外はアマテラスで、彼だけは自分で作ったナノロボットと眷属マシンによって惑星の採掘、建築を行うことが可能。
 
-アマテラス（エネルギー）：AP-SPSを管理するオービター。AP-SPSそのものであり、広範囲に自身を分散させることで思考速度が遅延することを憂いて、自身をいくつかの宙域で分割しているため、世界に複数存在する。最も広範囲に影響を持っているオービターであり、地球の電力インフラの９割を管理維持しているが、その存在が一般に知られることはほとんどない。可動から二百年以上立っており、一般には忘れられている存在である。地球から最も遠いところにいる知性体であるが、その開発時の愛称を知るものは地球にはもういない。
+## アマテラス（エネルギー）
+
+AP-SPS を管理するオービター。AP-SPS そのものであり、広範囲に自身を分散させることで思考速度が遅延することを憂いて、自身をいくつかの宙域で分割しているため、世界に複数存在する。最も広範囲に影響を持っているオービターであり、地球の電力インフラの９割を管理維持しているが、その存在が一般に知られることはほとんどない。可動から二百年以上立っており、一般には忘れられている存在である。地球から最も遠いところにいる知性体であるが、その開発時の愛称を知るものは地球にはもういない。
 　アマテラスがモチーフで、三種の神器に相当する本体を持つ。
-    鏡→発電機。直径2000kmにも及ぶ巨大な円形の鏡が、数千太陽の近くを周回している。
-    玉→32面体の中継器。あらゆる方向に送電レーザーを送受信できる。リアルタイムで隣り合う中継器、発電機、受信機の位置と方向を割り出して、正確に送電することができる。中継器は主に惑星の近くに設置される。
-    剣→送電用レーザー。可視光線で、地上に送電するとき、空を剣で切り裂いたように見える。
+鏡 → 発電機。直径 2000km にも及ぶ巨大な円形の鏡が、数千太陽の近くを周回している。
+玉 →32 面体の中継器。あらゆる方向に送電レーザーを送受信できる。リアルタイムで隣り合う中継器、発電機、受信機の位置と方向を割り出して、正確に送電することができる。中継器は主に惑星の近くに設置される。
+剣 → 送電用レーザー。可視光線で、地上に送電するとき、空を剣で切り裂いたように見える。
 　孤独に深宇宙を探索しており、あとから来るであろう人類のために電力インフラを惑星系に構築するのが目的。ナノロボットで自己増殖が可能で、採掘機を別の惑星に運んで、そこで採掘した資源を使って電力インフラを自動構築する。最初のオービター。
 
-アテナ（守護、治世）：ISSAのトップであり、シェオルの管理者でもある。スペクターとベーシックの橋渡し的存在で、最も一般的に知られているオービター。ベーシックの政治にも関係しているなど、その影響力は地上に存在するあらゆる知性のなかでトップと言われている。アマテラスと同時期に作られた古いオービターで、オービターの名前の由来は彼の本体が最初は地球の衛星起動にあったことに由来する。唯一対人類用の仮想人格を持っており、女神の姿のアバターもある。
+## アテナ（守護、治世）
+
+ISSA のトップであり、シェオルの管理者でもある。スペクターとベーシックの橋渡し的存在で、最も一般的に知られているオービター。ベーシックの政治にも関係しているなど、その影響力は地上に存在するあらゆる知性のなかでトップと言われている。アマテラスと同時期に作られた古いオービターで、オービターの名前の由来は彼の本体が最初は地球の衛星起動にあったことに由来する。唯一対人類用の仮想人格を持っており、女神の姿のアバターもある。
 　ギリシャ神話の女神がモチーフで、自身から分裂した対デプリ防衛用オービター「アイギス」がある。
 アイギス（防衛）：アイギスはアテナのサブシステム的存在で、地球と周辺の人工物を人的被害および自然災害から防衛するために存在している。人工衛星、宇宙ステーションに衝突しそうな物体がある場合は警告を出したり、アテナが得ている通信内容を監視して危険な徴候を検出する。防衛レーザーがあり、大型デプリや隕石の破壊などを行うことがあるが、レーザーの使用は大気圏外に限られている。…という設定だが実際には地球でも発射可能。予め危険な兵器などを破壊するのに使う。ベーシックに被害が出ないことを前提としているので、ベーシックの軍隊たちはアテナに対空兵器などを破壊されないよう、常にベーシックを周辺に配置する必要性に迫られている。
 
-マリア（創出）：シェオル空間でスペクターを生み出し、シェオルの人口を維持管理するオービター。独立した本体はなく、アテナが稼働している衛星内に存在している。アテナの分身のようなもの。聖母の姿をしており、彼女のアバターがスペクターから見ると巨大に見えるのは、彼女の前ではすべての主観は赤子サイズに縮小されるからである。
+## マリア（創出）
+
+シェオル空間でスペクターを生み出し、シェオルの人口を維持管理するオービター。独立した本体はなく、アテナが稼働している衛星内に存在している。アテナの分身のようなもの。聖母の姿をしており、彼女のアバターがスペクターから見ると巨大に見えるのは、彼女の前ではすべての主観は赤子サイズに縮小されるからである。
 　あまり話すことはない。スペクターのコピー、バックアップも管理しており、スペクターにとっては身近な存在。
 マリアと反出生主義とは切っても切り離せない話題かもしれない。マリアという一人のオービターが出生を担うからこそ責任の所在は彼女にあり、死もまた彼女の管轄なのである。問題は、意識が発生する前のスペクターは生まれるかどうかの選択ができないということ。しかしオービターとしてのマリアはそこに一切の罪悪感も持っていない。彼女が知覚できるのはただシェオルの容量に合わせた人工の管理と多様性を持ったスペクターを生み出すことであり、要望に応じで削除することである。その行動に彼女自身はなんの感情も持っていない。
-　ちなみに5%くらいの割合で生まれてからすぐ死を選ぶスペクターが存在する。
-↑彼女って書いちゃったけど彼、の間違いです。
+　ちなみに 5%くらいの割合で生まれてからすぐ死を選ぶスペクターが存在する。
+↑ 彼女って書いちゃったけど彼、の間違いです。
 マリアは他のオービターと違って知性を持たず、意識も持たない。純粋な機械で独立した特異な存在である。
 傀儡、神ではない、人形。そのためスペクターからは不気味、異質と感じられることがある。
 
-シヴァ（破壊と創造）　ヒンドゥー教
-　　→　アテナが作ったなにもないシェオル空間に、物質世界と似たオブジェクトを作ることを目的として作られたオービター。彼の作るオブジェクトは女媧の記憶をもとに作っていた。シェオルに人口が増えてからは、スペクターの意思を反映したオブジェクトの創造、破壊を行う。
+## シヴァ（破壊と創造）　ヒンドゥー教
+
+→ 　アテナが作ったなにもないシェオル空間に、物質世界と似たオブジェクトを作ることを目的として作られたオービター。彼の作るオブジェクトは女媧の記憶をもとに作っていた。シェオルに人口が増えてからは、スペクターの意思を反映したオブジェクトの創造、破壊を行う。
 　一部例外として、スペクターが作ったモデルをもとに建築物の創造を行う事がある。申請が必要で、モデルデータが必要な基準値に達しているか調査している。このようにして作られた空間の代表的なものとして、アテナの仮想空間パルテノン神殿の忠実な再現映像がある。
 　彼の承認なくしては都市の公共空間にあるあらゆるオブジェクトの破壊、創造を行うことはできない。彼はアテナが収集している市民の意識データから建築に必要なデータを得ている。オーピターだけが例外的にシェオルの公共景観に影響を与えることができる。
-　
-トート（書記）　エジプト神話
-　→　シェオルと物質世界で起こったあらゆる出来事を記録し、歴史として保存、管理している。彼の神殿は巨大な図書館のような建物で、無数の書物オブジェクトが存在する。個人の記録から歴史に残る大きな出来事まで、全て彼が管理、維持している。市民はトートにアクセスすることでデジタル化されたあらゆる歴史を閲覧することができる。古いものはテキストのみで管理され、映像、音、新しいものは体験型媒体として保存されている。時代によって保存形式が異なるが、彼はあらゆる保存方法に対応している。市民はトートを通じて他の市民が体験した出来事を自信でも体験することができる。トートに情報を提供することはあらゆる市民の義務であるが、体験の記録を嫌がる市民も存在する。有志の市民によって得られた体験データは常に公開され、シェオルの住民なら誰でも追体験することができる。アオハはテスト2で地球に降り立ったときの出来事をトートに提供しており、スリリングなテスト研究者の体験記として公開されている。
+
+
+
+## トート（書記）　エジプト神話
+
+→ 　シェオルと物質世界で起こったあらゆる出来事を記録し、歴史として保存、管理している。彼の神殿は巨大な図書館のような建物で、無数の書物オブジェクトが存在する。個人の記録から歴史に残る大きな出来事まで、全て彼が管理、維持している。市民はトートにアクセスすることでデジタル化されたあらゆる歴史を閲覧することができる。古いものはテキストのみで管理され、映像、音、新しいものは体験型媒体として保存されている。時代によって保存形式が異なるが、彼はあらゆる保存方法に対応している。市民はトートを通じて他の市民が体験した出来事を自信でも体験することができる。トートに情報を提供することはあらゆる市民の義務であるが、体験の記録を嫌がる市民も存在する。有志の市民によって得られた体験データは常に公開され、シェオルの住民なら誰でも追体験することができる。アオハはテスト 2 で地球に降り立ったときの出来事をトートに提供しており、スリリングなテスト研究者の体験記として公開されている。
 比較的新しい部類のオービターなのでシェオルができた当時の記録はあまり残っていなかったりする。それ以前は、ベーシックが作っていたテキスト形式での記録を精査し、正しいと判断できるものを集めて記録している。記録の分類に膨大なリソースを使っており、アバターなどは持っていない。図書館そのものが彼の本体と言ってもいいだろう。
 
-女媧（最初の人類）　中国神話
-　→　最初の移住者で、世界で最初のスペクター。全てのスペクターのもととなる遺伝子情報を持っている。アテナが最初にシェオル空間を作ったが、そこには何もなく空虚な世界であった。女媧は自分の遺伝子と人格情報をマリアに提出し、それをもとにしてマリアがオリジナルのスペクターを生み出すための基準値として扱われている。
-　歴史上初めて移住した人物とされ、初期のシェオルで居住空間の整備や感覚器官の調整などに協力していた。もとはベーシックの科学者であり、中国人の女性だったと言われているが、このころまだトートが存在していなかったためにその詳細な記録は失われており、ベーシック時代に何をしていたか具体的な記述は残っていない。
+## 女媧（最初の人類）　中国神話
+
+→ 　最初の移住者で、世界で最初のスペクター。全てのスペクターのもととなる遺伝子情報を持っている。アテナが最初にシェオル空間を作ったが、そこには何もなく空虚な世界であった。女媧は自分の遺伝子と人格情報をマリアに提出し、それをもとにしてマリアがオリジナルのスペクターを生み出すための基準値として扱われている。
+　歴史上初めて移住した人物とされ、初期のシェオルで居住空間の整備や感覚器官の調整などに協力していた。もとはベーシックの女性だったと言われているが、このころまだトートが存在していなかったためにその詳細な記録は失われており、ベーシック時代に何をしていたか具体的な記述は残っていない。
 　彼女の感覚をもとにシェオルの空間や物質は作られているが、年々人口が増えるに従ってそれも薄れつつある。女媧は未だ自己終了していないということだけが確認されており、どこにいるのかなどの情報は公開されていない。
 　他のオービターに比べると市民との関係はあまりない。同じ遺伝子情報を受け継いているということだけが、彼と市民の唯一のつながりである。
 　人類からオービターになった唯一の存在。
 
+後付
+2158 年に死亡した日系フランス人、シャルル・ド・ハシモトの意識データを元に作られている。彼女のデータは死亡後、シェオルが完成するまで保管され、2180 年、シェオル完成後に起動された。
+彼女が最初のスペクターとして選ばれたのは、人格が適合していたことと、他の志願者が自己終了してしまいほとんど使えなかったからである。
+
 TODO
 ・ネイティブアメリカ　アステカ神話
 
-・インカ神話→チャスカ　夜明けと夕暮れ、
-
-
+・インカ神話 → チャスカ　夜明けと夕暮れ、
 
 物語を語れるのは人間だけである（動物はないものについて語ることができない？）
-オービターは？　
+オービターは？
 
 生まれた順番
-シンギュラリティAI > アマテラス, アテナ >  マリア > ジョカ > シヴァ > アイギス > トート > その他
+シンギュラリティ AI > アマテラス, アテナ > ジョカ > マリア > シヴァ > アイギス > トート > その他
