時系列に設定追加

--- a/settings/PoleStarSettings/時系列.md
+++ b/settings/PoleStarSettings/時系列.md
@@ -1,65 +1,65 @@
-* 2035　SSPSの初稼働（現実での計画）
-* 2046  量子コンピュータの実用化（シンギュラリティの予測点）
-    * AIの研究が加速。
-    * 神経科学は遅れてついてくるのでMI完成はここから80年後にします。その間はAIの天下。
-* 2057年代 SSPS量産。初号機から30年かけて計5基が衛星軌道周回、量産計画。
-    * 火星へ有人探査開始
-* 2070年代 
-    * この間…どうしよう。作中でのシンギュラリティはこの辺
-    * 神経科学の飛躍的進歩が、何らかの原因で行われる。
-        * スペクターを作る計画は技術的に可能でも社会に浸透するまで１世代（100年）位かかると予想
-* 2150 年くらい
-    * オービターを生むAIの完成。ここから数十年かけてAIが初のオービターを作る
-    * 遺伝子組み換え人間（エルフ）の誕生。
+- 2035 　 SSPS の初稼働（現実での計画）
+- 2046 量子コンピュータの実用化（シンギュラリティの予測点）
+  - AI の研究が加速。
+  - 神経科学は遅れてついてくるので オービター 完成はここから 80 年後にします。その間は AI の天下。
+- 2057 年代 SSPS 量産。初号機から 30 年かけて計 5 基が衛星軌道周回、量産計画。
+  - 火星へ有人探査開始
+- 2070 年代
+  - この間…どうしよう。作中でのシンギュラリティはこの辺
+  - 神経科学の飛躍的進歩が、何らかの原因で行われる。
+    - スペクターを作る計画は技術的に可能でも社会に浸透するまで１世代（100 年）位かかると予想
+- 2150 年くらい
+  - オービターを生む AI の完成。ここから数十年かけて AI が初のオービター（の原型）を作る
+  - 遺伝子組み換え人間（エルフ）の誕生。
+- 2179
+  - シャルル・ド・ハシモト 死去。彼女の意思データを使用したスペクターの原型みたいなものが出来上がる。それをオービター作成 AI に食わせてオービターとスペクターの原型が出来上がる。
+- 2180 最初のオービターの誕生。AP-SPS の計画始動。
+  - 女媧がなにもないシェオルに一人で移住。はじめてのスペクターとなる。（女媧以前の移民は精神病んだりなんだりで自己終了している。初めて定着し半年以上経過した人間が女媧と呼ばれている）
+- 2193 　試験的に仮想都市計画が開始される。
+  - 月面旅行が一般化している
+  - 移民時代　カルミアさん、ナオたちの移住開始。[雲上のヨモツクニ]
+  - AP-SPS の建築開始がこの辺
+- 2210 創出オービターの誕生。人工的に仮想社会の中で知性を作り出すことが可能に。
+- 2270~2310 年台 スキャン保険が徐々に一般化し、移民が増える
+- 2300~2500 年台 安定期 シェオルの都市は必達し、AP-SPS の供給する電力に移行する国が増える
+  - この間が大きいのは、スペクターという存在が人間と認められ、ベーシックという呼び名が定着するまでのマージン期間。数世代掛かると予想。
+  - [アカシロ]
+  - 2300 年代 [月猫] ディーリーがドールのテストをする。リアル人型ドールはまだ完全ではないが、猫は騙せる
+- 2500 年代　惑星移住プロジェクトが開始される。
+- 2643 アオハの生まれ年。
+- 2640 [Orbiter 前編]
+- 2656 小惑星に住む人の話[観察者]　アオハ（コピー 3）のテスト開始。
+- 2660 年ごろ　アオハ（コピー 3）が地球へ帰還。月でニクスに暴走した電気動物の回収を手伝わされる。[first test][白鴉 前編]
+- 2665 AP-SPS の完成　[機械仕掛けの神々][白鴉 後編]　アオハ（コピー 1 本体、常にシェオルにいる）
+- ↑ とほぼ同時期、アオハのコピー 3。[second test]
+- 2700 年くらい [Orbiter 後編]
+- 2758 [Observer]のリチャード達が初の AP-SPS での転送移動を行う。
+  - もういっそこの辺で、ワームホールを電気なら抜けられるということにして、ベーシックは無理だけどデータなら転送できるからスペクターだけ何百光年離れたところへ行けるという話にしてしまおうか。
 
-* 2180 最初のオービターの誕生。AP-SPSの計画始動。
-    * 女媧がなにもないシェオルに一人で移住。はじめてのスペクターとなる。（女媧以前の移民は精神病んだりなんだりで自己終了している。初めて定着し半年以上経過した人間が女媧と呼ばれている）
-* 2193　試験的に仮想都市計画が開始される。
-    * 月面旅行が一般化している
-    * 移民時代　カルミアさん、ナオたちの移住開始。[雲上のヨモツクニ]
-    * AP-SPSの建築開始がこの辺
-* 2210 創出オービターの誕生。人工的に仮想社会の中で知性を作り出すことが可能に。
-* 2270~2310年台 スキャン保険が徐々に一般化し、移民が増える
-* 2300~2500年台 安定期 シェオルの都市は必達し、AP-SPSの供給する電力に移行する国が増える
-    * この間が大きいのは、スペクターという存在が人間と認められ、ベーシックという呼び名が定着するまでのマージン期間。数世代掛かると予想。
-    * [アカシロ]
-    * 2300年代 [月猫] ディーリーがドールのテストをする。リアル人型ドールはまだ完全ではないが、猫は騙せる
-* 2500年代　惑星移住プロジェクトが開始される。
-* 2643 アオハの生まれ年。
-* 2640 [Orbiter 前編]
-* 2656 小惑星に住む人の話[観察者]　アオハ（コピー3）のテスト開始。
-* 2660年ごろ　アオハ（コピー3）が地球へ帰還。月でニクスに暴走した電気動物の回収を手伝わされる。[first test][白鴉　前編]
-* 2665 AP-SPSの完成　[機械仕掛けの神々][白鴉　後編]　アオハ（コピー1本体、常にシェオルにいる）
-*  ↑とほぼ同時期、アオハのコピー3。[second test]
-* 2700年くらい [Orbiter 後編]
-* 2758 [Observer]のリチャード達が初のAP-SPSでの転送移動を行う。
-    * もういっそこの辺で、ワームホールを電気なら抜けられるということにして、ベーシックは無理だけどデータなら転送できるからスペクターだけ何百光年離れたところへ行けるという話にしてしまおうか。
-- 2800年代　
-  - 2817 [オルフェウスの竪琴] アオハコピー3（１はシェオル、2はゲーム中）
-  - 発端は2500年代にアテナに監視される地球文明を恐れた民間企業が作った移民団がベガ星系に移住。後に現地生物に襲われて全滅したことから。
-- 2900年代
-    - ベガe2の調査結果から超光速通信方法が発明される。これが一般化されるまで時間がかかったけど割愛。
+* 2800 年代
+  - 2817 [オルフェウスの竪琴] アオハコピー 3（１はシェオル、2 はゲーム中）
+  - 発端は 2500 年代にアテナに監視される地球文明を恐れた民間企業が作った移民団がベガ星系に移住。後に現地生物に襲われて全滅したことから。
+* 2900 年代
+  - ベガ e2 の調査結果から超光速通信方法が発明される。これが一般化されるまで時間がかかったけど割愛。
 
 こっから光の速さこえるじゃん。
 
-
-- 地球から６千光年あたりで知的文明の痕跡を見つける。DNA配列が機械語。
-- 9800年 ここから地球文明以前の存在が明らかになり、恒星間飛行の手段を見つける。…なんらかの、光速を超える物質とそれを使う手段。
-- 西暦10000年代 人類のほとんどが移住、もしくはベーシックは数が激減する。多くは発達しすぎた知能による反出生主義が一般的になったことから。
-- 13000年代…近隣の星系を探索して居住範囲を広げだところで地球が再びの全休凍結の危機（数千年？万単位？）アウトサイダーたちはわずかな長距離通信信号を見つけて、インサイダーの末裔の移住を促しに行く（番外短編）
-- 13500年ごろ　スペクターたちは別の銀河系で同じレベルの知的生命体と出会う。彼らも同じく他の知性体を探しているところだった。ここから数千年かけて彼らとスペクターたちは交流を深めて行くことになる。
-- 35000年代　生物としての人は絶滅し、残ったスペクターたちは他の知性体と交流を始める。新しい銀河文明の始まりである。
-- 40000年　AP-SPSが天の川銀河征服完了。すべてのAP-SPSが超光速物質によって置き換えられる。アンドロメダ銀河に到達。冒険はまだまだ続くんじゃ。
-おわり
-
-
+- 地球から６千光年あたりで知的文明の痕跡を見つける。DNA 配列が機械語。
+- 9800 年 ここから地球文明以前の存在が明らかになり、恒星間飛行の手段を見つける。…なんらかの、光速を超える物質とそれを使う手段。
+- 西暦 10000 年代 人類のほとんどが移住、もしくはベーシックは数が激減する。多くは発達しすぎた知能による反出生主義が一般的になったことから。
+- 13000 年代…近隣の星系を探索して居住範囲を広げだところで地球が再びの全休凍結の危機（数千年？万単位？）アウトサイダーたちはわずかな長距離通信信号を見つけて、インサイダーの末裔の移住を促しに行く（番外短編）
+- 13500 年ごろ　スペクターたちは別の銀河系で同じレベルの知的生命体と出会う。彼らも同じく他の知性体を探しているところだった。ここから数千年かけて彼らとスペクターたちは交流を深めて行くことになる。
+- 35000 年代　生物としての人は絶滅し、残ったスペクターたちは他の知性体と交流を始める。新しい銀河文明の始まりである。
+- 40000 年　 AP-SPS が天の川銀河征服完了。すべての AP-SPS が超光速物質によって置き換えられる。アンドロメダ銀河に到達。冒険はまだまだ続くんじゃ。
+  おわり
 
 もっと大雑把に
+
 - 人口知能が道具みたいな感じになる
 - 機械知性が誕生（新人類？）
 - 彼らの協力により宇宙開発がすすむ
 - 移住する
-- かつての文明の名残（DNAが機械語になっている生物）を発見
+- かつての文明の名残（DNA が機械語になっている生物）を発見
 - 地球文明も二番手であり、前世代はあまりに短期間に発達したために滅亡したことが判明。地球へ来たのは少数の生き残り（ホーガン的理論ｗ）
- 
-金星の資源は採取できるのか→ベネラ計画。
+
+金星の資源は採取できるのか → ベネラ計画。
