リライト前に一旦コミット

--- a/Novalectro/登場人物.md
+++ b/Novalectro/登場人物.md
@@ -1,10 +1,6 @@
 お互い正体を隠したまま物語が進む SF ミステリー？みたいな？
 メイン人物の名前は物理の単位とか科学者から。
 
-ルクスの目的は「子供の頃の友達を見つける」こと。
-もういないのは薄々気づいているが、証拠を集めるために探している。
-ラスト：社会に自分の意思を発信する
-
 ---
 
 遺伝子操作した人間を作って臓器移植のドナーにする養殖所と呼ばれる施設で育ったルクス達。あるとき４人の子供は隙を見て施設を逃げ出す。しばらく一緒に暮らしていたが、事故にあってルクスは右足を友だちをなくした。
@@ -17,7 +13,7 @@
 ちゃんとした教育を受けなかったので読み書きが苦手。運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれる。
 ルクスを探しているレシピエントがいるかもしれない。見つかったら心臓取られるからね。義足にナイフを仕込んでいる。
 
-#### シャルル・オギノ　（偽名）
+#### シャルル・オギノ（偽名）
 
 ルクスの義足を修理した修理屋。派手なパンクファッションの年齢不詳。
 本業は大手義肢メーカーの一つ、Limb tech のエンジニアで、軍用アンドロイド OS を開発している。プロトタイプ OS を積んだパスカルというアンドロイドを伴っている。生体パーツを販売している Genesis Visage を目の敵にしている。人間嫌い。いつか機械の体になることを夢見ている。
@@ -46,25 +42,26 @@
 SynthBliss 　シンスブリス
 合成（Synthetic）された幸福（Bliss）の意。合法麻薬。
 
-Limb tech
+### 会社名
+Limb tech　リム・テック
 シャルの在籍している IT 企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。近年はアンドロイドようの OS の開発も行っている。
 
-Genesis Visage
+Genesis Visage　ジェネシス・ヴィサージュ
 生体パーツを販売する大手企業。ルクスの育った施設はここと取引している。内蔵から皮膚まで移植や販売とケア、美容関連まで幅広く行っている企業。人間を養殖している施設を密かに取引している。
 
 街の名前
 ノヴァ・レクトロ（Novalectro）ラテン語と英語だよ
 
-個人用の携帯端末: Extensar　エクステンサー　（from chatGPT）
-携帯型、ウェアラブルタイプなど色々なメーカーが出している。OS もいくつかあるが、総称してエクステンサーと呼ぶ。
+個人用の携帯端末: リグ rig 
+携帯型、ウェアラブルタイプなど色々なメーカーが出している。OS もいくつかあるが、それの総称。
 ほとんどの人間が持っている。個人情報…の認証は政府のサーバが保管しているから身一つで支払いしたり車を運転したりできる。
 基本的に音声インターフェースなのでディスプレイとかが不要。一応、オプションでつけられる。細かい作業をしたい人とかはHMD装備している。ちょっとまて、聴覚苦手民は？
 オプションの視覚拡張インターフェースをお使いください。いや、購入時に選べるようにしておくか。
 手足は補充できるし。
 
-街の中には至るところにディスプレイレンタル装置が存在しており、まぁカフェ的な場所で、そこでエクステンサーを接続して動画を見たり通話したりできる。そういうビジネスが一般的。
+街の中には至るところにディスプレイレンタル装置が存在しており、まぁカフェ的な場所で、そこでrigを接続して動画を見たり通話したりできる。そういうビジネスが一般的。
 
 人間プラント
-遺伝子操作した人間を製造する施設。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。ルクスの生まれた場所。
+遺伝子操作した人間を製造する養殖所。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。ルクスの生まれた場所。
 違法ではないが倫理的に問題があるとされている。公にされると物議を醸すので、大手の生体パーツ販売メーカーはこっそり取引している。一部のレシピエントはわざわざ美しい人体パーツを交換するために買っている。実質アングラビジネス。
 
