ChatGPTと会話してプロット作成

--- a/Novalectro/プロット.md
+++ b/Novalectro/プロット.md
@@ -1,6 +1,16 @@
-## プロット
+# プロット
+## 第一幕
+ノヴァレクトロという大都市。ルクスはバイオハッカーコミュニティに属する運び屋であり、失踪した仲間たちを探すために都市にやってきた人。
+ドローンの配達業者が補えない荷物を運搬する運び屋。デジタル管理されたくない荷物（割とアングラ）なものもこのために流通している（ここで受取チェックシステム的なものを使っているようにしたい。サイン文化はもうないので）が、配送インフラは間に合ってないので運び屋自体は合法である。
+ある日、富裕層の住居に荷物を届けた帰りに二人の暴漢に襲われる。こっちはアングラな人探しコミュニティで、主に人身売買組織が運営している…に雇われたチンピラ二人。をたまたま通りがかった？シャルが仲裁に入って通報する脅す。チンピラとシャルは知り合い（姐さん！？）通報に同意するチンピラ二人と、警察は辞めてほしいというルクス。仕方ないので見なかったことにして、チンピラとルクスの義肢を修理しながら話を聞く。
 
-とりあえず書いてみようぜ
-主人公の設定決まらないと書けないだろうが！！！！
+## 第二幕
+バイオテクノロジー企業とシャルの属するサイバネティクス企業の対立が明らかになる。バイオテクノロジー企業は「純粋な人間」の概念を売り込み、社会の分断をさらに深めようとする。
+シャルがサイバネティクス企業を代表して、富裕層が集まるパーティーや企業間の重要な交渉に参加する。シャルもフォーマルドレスに身を包み、義足のPRのため参加する。
+事故のデータから、友人がすでに「出荷」されていたことを知る。シャルに過去を打ち明け、二人は企業の陰謀を暴く計画を立てる。
+デジタルシンセシストの一員であるナギの協力を得て、ピュアジェネティクスのサーバをハックし、仲間たちの行方を追う。
+一方シャルはルクスの話を元にリムテック社員と調査して、ピュアジェネティクスがプラントから遺伝子操作で作られた人体パーツを入荷していたことを突き止める。完全なる”自然な”パーツと偽って販売していたことをメディアを通して暴露し、ピュアジェネティクスは顧客たちから問い合わせが殺到する。
 
-「この義足はどこで？」
+## 第三幕
+ルクスとシャルは、バイオテクノロジー企業の本社に侵入し、企業の陰謀を暴露。企業の表向きのイメージが崩壊し、「純粋な人間」の理念が揺らぐ。ルクスは仲間たちが移植された先のレシピエントと面会し、かつての仲間の面影がないことを確認する。
+ルクスとシャルは新たな道を歩む決意を固める。一方、企業の崩壊によって社会に変化が訪れ、分断されたコミュニティが和解に向けて歩み始める兆しが見え始める。物語は、未来への希望を残して締めくくられる。
