ちょっと書いた

--- a/Novalectro/名詞たち.md
+++ b/Novalectro/名詞たち.md
@@ -28,7 +28,7 @@
 一緒に施設を抜け出した後、しばらく共同生活した子どもたち。それぞれの移植に使われてもういない。
 
 SynthBliss 　シンスブリス
-合成（Synthetic）された幸福（Bliss）の意。合法麻薬。
+合成（Synthetic）された幸福（Bliss）の意。合法ドラッグ。サイバーパンクといえばドラッグ。
 
 # Limb tech　リムテック
 シャルが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟を目指すことを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。ノヴァレクトロに本社がある。
