--- a/Novalectro/プロット.md
+++ b/Novalectro/プロット.md
@@ -5,7 +5,7 @@
 ある日、富裕層の住居に荷物を届けた帰りに二人の暴漢に襲われる。こっちはアングラな人探しコミュニティで、主に人身売買組織が運営している…に雇われたチンピラ二人。をたまたま通りがかった？シャルが仲裁に入って通報する脅す。チンピラとシャルは知り合い（姐さん！？）通報に同意するチンピラ二人と、警察は辞めてほしいというルクス。仕方ないので見なかったことにして、チンピラとルクスの義肢を修理しながら話を聞く。
 
 ## 第二幕
-バイオテクノロジー企業とシャルの属するサイバネティクス企業の対立が明らかになる。バイオテクノロジー企業は「純粋な人間」の概念を売り込み、社会の分断をさらに深めようとする。
+バイオテクノロジー企業とシャルの属するサイバネティクス企業の対立が明らかになる。バイオテクノロジー企業は「純粋な人間」の概念を売り込み、社会の分断をさらに深めようとする。ところで、富裕層は肉体労働などしないので、”純粋な人間”の人たちは脳を仮想空化に接続する（ドリームオルガンの原型）はするけど、義体化はしない。よ
 シャルがサイバネティクス企業を代表して、富裕層が集まるパーティーや企業間の重要な交渉に参加する。シャルもフォーマルドレスに身を包み、義足のPRのため参加する。
 事故のデータから、友人がすでに「出荷」されていたことを知る。シャルに過去を打ち明け、二人は企業の陰謀を暴く計画を立てる。
 デジタルシンセシストの一員であるナギの協力を得て、ピュアジェネティクスのサーバをハックし、仲間たちの行方を追う。
