設定など追記

--- a/Novalectro/名詞たち.md
+++ b/Novalectro/名詞たち.md
@@ -4,20 +4,22 @@
 
 # ルクス・グレイ（偽名）
 
-義足の青年。プラチナブロンドの髪とパープルアイの珍しい容姿のために苦労している遺伝子操作で生まれた人間。
-一緒に施設を逃げ出した仲間を探して、ノヴァ・レクトロにやってくる。売るために髪を伸ばしている。
-ちゃんとした教育を受けなかったので読み書きが苦手。運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれる。バイオテクノロジー企業は資産であるルクスを回収しようと探している。義足にナイフを仕込んでいる。
+左足が義足の青年。プラチナブロンドの髪とパープルアイの珍しい容姿のために苦労している。移植用に遺伝子操作した人間を製造するプラント生まれで、子どもの頃に仲間と逃げ出した。
+行方不明の仲間を探して、ノヴァ・レクトロにやってくる。髪は売るために伸ばしている。
+ちゃんとした教育を受けなかったので読み書きが苦手で運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれる。若干の人間不信。バイオテクノロジー企業の PureGenetics は資産であるルクスを回収しようと探している。人間が移植可能になるまで育つのには時間がかかるのと、シンプルに完成度が高かったので需要がめちゃくちゃある。義足にナイフを仕込んでいる。
 
 # シャルル・オギノ（偽名）
 
-サイバネティクス企業に所属するエンジニア。自身も義肢ユーザーであり、健康だが仕事への好奇心のために人体改造している。ファッションも派手なパンクで、ピアスがいっぱいある。自社製品である汎用AI「パスカル」の試作を持っている。
-香水が好き。
+サイバネティクス企業、 Limb tech に所属するエンジニア。プロ意識が高い。パンクファッションを好み、黒髪のボブに大きなピアスをつけている。耳と舌にあいてる。自社製品の汎用AI「パスカル」の試作をテストしている。
+アダプタ式の付け替え可能な義足（両足）、肝臓（半分くらい機械）、胸と子宮切除済（軽量化）、右手にリグ操作のためのコントロールデバイスを埋め込んでいる。ノンバイナリーのアロマアセク。人間にはほぼ興味がない。
+香水が好きなので胴体と両腕は生身。
+
 
 シャルルはクーロン。荻野は近代日本の最初の女性医師から。
 
 #　凪　ナギ
 野良のデジタルハッカー。シャルとは友人らしい。
-電子機器に囲まれた部屋に住んでおり、そこから出てくることはほぼない。
+電子機器に囲まれた部屋に住んでおり、外に出てくることはほぼない。
 
 # 警官　葉山さん　ミナト　湊　３５歳　
 繁華街の管轄の警官。シャルのことが密かに好き。
@@ -25,10 +27,11 @@
 
 ルクスの友達
 エルグ、レム
-一緒に施設を抜け出した後、しばらく共同生活した子どもたち。それぞれの移植に使われてもういない。
+一緒に施設を抜け出した後、しばらく共同生活した子どもたち。だいぶ前に PureGenetics に "回収" 、移植されているので本人はすでに存在していないが、死んでいるとも言えない（一部は機能しているので）。
 
-SynthBliss 　シンスブリス
+SynthBliss シンスブリス
 合成（Synthetic）された幸福（Bliss）の意。合法ドラッグ。サイバーパンクといえばドラッグ。
+（この設定は使うか未定）
 
 # Limb tech　リムテック
 シャルが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟を目指すことを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。ノヴァレクトロに本社がある。
@@ -40,7 +43,7 @@ SynthBliss 　シンスブリス
 その中でも世界的に影響力のあるピュアジェネティクス工業は富裕層の支持が最も高く、また市民からも憧れの的となっているが、貧困層から生体パーツを買い取っているのもまた、元をたどればピュアジェネティクスである。
 
 # 街の名前
-ノヴァ・レクトロ（Novalectro）ラテン語と英語だよ
+ノヴァ・レクトロ（Novalectro）ラテン語と英語
 
 # 個人携帯端末: リグ rig 
 携帯型、ウェアラブルタイプなど色々なメーカーが出している。OS もいくつかあるが、それの総称。
@@ -50,5 +53,5 @@ SynthBliss 　シンスブリス
 街の中には至るところに公衆ディスプレイが存在しており、カフェ的な場所で、そこでrigを接続して動画を見たり通話したりできる。そういうビジネスが一般的。
 
 # プラント
-遺伝子操作した人間を製造する養殖所。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。売るためだけに人間を生産しているアングラ企業。
+遺伝子操作した人間を製造する養殖所。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。売るためだけに人間を生産しているアングラ企業。正式名称は色々あるが、総称してプラントと呼ばれる。
 やっていることは人身売買だが、遺伝子操作技術には秀でており、様々な条件に応じた遺伝子情報を保存している一流企業でもある。ノヴァレクトロからは離れた田舎に工場がある。
