--- a/Novalectro/プロット.md
+++ b/Novalectro/プロット.md
@@ -13,4 +13,5 @@
 
 ## 第三幕
 ルクスとシャルは、バイオテクノロジー企業の本社に侵入し、企業の陰謀を暴露。企業の表向きのイメージが崩壊し、「純粋な人間」の理念が揺らぐ。ルクスは仲間たちが移植された先のレシピエントと面会し、かつての仲間の面影がないことを確認する。
+ルクスの髪、終盤で回収しよう。病気の女の子にお礼を言われればいいさ。シャルのつてで知り合いの子に売却。足がつかないし高く売れる。
 ルクスとシャルは新たな道を歩む決意を固める。一方、企業の崩壊によって社会に変化が訪れ、分断されたコミュニティが和解に向けて歩み始める兆しが見え始める。物語は、未来への希望を残して締めくくられる。
