--- a/Novalectro/名詞たち.md
+++ b/Novalectro/名詞たち.md
@@ -3,25 +3,21 @@
 ---
 
 # ルクス・グレイ（偽名）
-
 左足が義足の青年。プラチナブロンドの髪とパープルアイの珍しい容姿のために苦労している。移植用に遺伝子操作した人間を製造するプラント生まれで、子どもの頃に仲間と逃げ出した。
 行方不明の仲間を探して、ノヴァ・レクトロにやってくる。髪は売るために伸ばしている。
-ちゃんとした教育を受けなかったので読み書きが苦手で運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれる。若干の人間不信。バイオテクノロジー企業の PureGenetics は資産であるルクスを回収しようと探している。人間が移植可能になるまで育つのには時間がかかるのと、シンプルに完成度が高かったので需要がめちゃくちゃある。義足にナイフを仕込んでいる。
+ちゃんとした教育を受けなかったので読み書きが苦手で運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれるため、若干の人間不信。バイオテクノロジー企業の エステフォルマ は資産であるルクスを回収しようと探している。もともと要人の心臓移植のために作られたので、遺伝子とかがそれに適合するようになっている。髪と目はついでというか、臓器以外にも性能のいいパーツを作るのはプラントとしては一般的。義足にナイフを仕込んでいる。
 
 # シャルル・オギノ（偽名）
-
-サイバネティクス企業、 Limb tech に所属するエンジニア。プロ意識が高い。パンクファッションを好み、黒髪のボブに大きなピアスをつけている。耳と舌にあいてる。自社製品の汎用AI「パスカル」の試作をテストしている。
-アダプタ式の付け替え可能な義足（両足）、肝臓（半分くらい機械）、胸と子宮切除済（軽量化）、右手にリグ操作のためのコントロールデバイスを埋め込んでいる。ノンバイナリーのアロマアセク。人間にはほぼ興味がない。
+サイバネティクス企業、 Limb tech に所属するエンジニア。パンクファッションを好み、黒髪のボブに大きなピアスをつけている。耳と舌にあいてる。自社製品の汎用AI「パスカル」の試作をテストしている。
+アダプタ式の付け替え可能な義足（両足）、肝臓（半分くらい機械）、胸と子宮切除済（軽量化）、右手にリグ操作のためのコントロールデバイスを埋め込んでいる（ピアスのように表面から凹凸や金属パーツが見える）。ノンバイナリーのアロマアセク。機械が好きで、人間にはあまり興味がない。両足が義足のために脚力が非常に強く足も早い。
 香水が好きなので胴体と両腕は生身。
-
-
-シャルルはクーロン。荻野は近代日本の最初の女性医師から。
+シャルルはクーロン。荻野は近代日本最初の女性医師から。
 
 #　凪　ナギ
-野良のデジタルハッカー。シャルとは友人らしい。
+野良のデジタルハッカー。シャルとは友人。
 電子機器に囲まれた部屋に住んでおり、外に出てくることはほぼない。
 
-# 警官　葉山さん　ミナト　湊　３５歳　
+# 警官　葉山さん　ミナト　湊　37歳　
 繁華街の管轄の警官。シャルのことが密かに好き。
 シャルの顔なじみで、なぜかお互い個人の連絡先を知っている。シャルには都合の良い人間としか見られていないが、諦めきれてない。
 
@@ -33,25 +29,35 @@ SynthBliss シンスブリス
 合成（Synthetic）された幸福（Bliss）の意。合法ドラッグ。サイバーパンクといえばドラッグ。
 （この設定は使うか未定）
 
-# Limb tech　リムテック
-シャルが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟を目指すことを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。ノヴァレクトロに本社がある。
-義肢のシェア数は世界トップ3に入る。ピュアジェネティクスとはお互いに敵視している。
+# Limb tech（リムテック）
+シャルが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟と人間の可能性を拡張することを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。もともとあった自動車メーカーの子会社だったものが独立して成長した。
 
-# PureGenetics Industries
-バイオテクノロジー企業の目的は純粋に資本である。安全で高品質な移植技術と生体パーツ販売のネットワークを持っているのが売り。
+# AestheForma Industries（エステフォルマ工業）
+バイオテクノロジー企業の目的は純粋に資本である。安全で高品質な移植技術と生体パーツ販売のネットワークを持っている。
 市場に「完全に有機的な肉体を持つ者そこ真の人類である」という広告を打っている。彼らのターゲットは資本力のある政治家や起業家の中でも、有機的、自然で、古来からの人類の形に依存している思想のコミュニティに売るために、アングラなプラントと事業提携している。
-その中でも世界的に影響力のあるピュアジェネティクス工業は富裕層の支持が最も高く、また市民からも憧れの的となっているが、貧困層から生体パーツを買い取っているのもまた、元をたどればピュアジェネティクスである。
+その中でも世界的に影響力のあるエステフォルマは富裕層の支持が最も高く、また市民からも憧れの的となっているが、貧困層から生体パーツを買い取っているのもまた、元をたどればピュアジェネティクスである。
+創業者は幼少期に事故か病気で障害を患っていたが、先進的移植技術により生まれてそのままよりも丈夫で美しくなったことから、生身の肉体や美というものに執着するようになる。
 
 # 街の名前
 ノヴァ・レクトロ（Novalectro）ラテン語と英語
+もともと工業都市で自動車メーカーなどで栄えていた地方都市。エステフォルマのオフィスが出来たのをきっかけに街の再開発が行われ、貧困層はいなくなり美しさと先進性を構えた都市になるはずだった。
+30年ほど前にプラントが大量に人間を作ったために、遺伝子操作された身寄りのない貧困層が爆発的に増加。世界の各地は住処のない人々を移民として迎え入れたが、多様性を受け入れられない人々によって反対運動が起こり結果的に彼らはノヴァ・レクトロの隅に住み着き、手足や目や臓器を売って生活するようになる。
 
-# 個人携帯端末: リグ rig 
-携帯型、ウェアラブルタイプなど色々なメーカーが出している。OS もいくつかあるが、それの総称。
-ほとんどの人間が持っている。個人情報…の認証は政府のサーバが保管しているから身一つで支払いしたり車を運転したりできる。
-基本的に音声インターフェースなのでディスプレイとかが不要。一応、オプションでつけられる。細かい作業をしたい人とかはHMD装備している。聴覚苦手民は視覚拡張インターフェースをお使いください。購入時に選べる。
 
-街の中には至るところに公衆ディスプレイが存在しており、カフェ的な場所で、そこでrigを接続して動画を見たり通話したりできる。そういうビジネスが一般的。
+## Cobalt Spire 単に、コバルトエリア
+ノヴァ・レクトロの中でも富裕層が住むエリア。中央に富裕層の居住とオフィスが立ち並ぶ世界有数の都市。
+
+## Ash Quater 灰色区画
+ノヴァ・レクトロのなかでもとりわけ治安悪いエリア。ルクスが住んでいる。住民の殆どが義肢ユーザーでどこか欠けている。
+
+## その他 ミッドエリア
+最も多くの住民がいる、広いエリア。コバルトを囲むように広がっている。
+
+# 個人用携帯端末: リグ rig 
+ウェアラブルな通信端末。ほとんどの人間が持っている。個人情報…の認証は政府のサーバが保管しているから身一つで支払いしたり車を運転したりできる。安価なものから人体に埋め込む高価なタイプまで色々。クラウドで処理するものがほとんどなので本体に対して処理能力はないため、軽量で安価。
+基本的に音声インターフェースなのでディスプレイは最低限。ディスプレイタイプも選べる。
+街の中には至るところに公衆ディスプレイが存在している。カフェにはディスプレイのレンタルがあることが多い（ディスプレイ単体の場所もある）。割と一般的なビジネス。
 
 # プラント
 遺伝子操作した人間を製造する養殖所。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。売るためだけに人間を生産しているアングラ企業。正式名称は色々あるが、総称してプラントと呼ばれる。
-やっていることは人身売買だが、遺伝子操作技術には秀でており、様々な条件に応じた遺伝子情報を保存している一流企業でもある。ノヴァレクトロからは離れた田舎に工場がある。
+遺伝子操作技術には秀でており、様々な条件に応じた遺伝子情報を保存している大企業でもある。ノヴァレクトロからは離れた土地に工場がある。30年前に大量に人間を生産しすぎて問題になり、今ではかなり制限されている（表向き）。裏向きでは変わらず大量生産し、地方で育成して富裕層向け生体パーツとして出荷している。性能は折り紙付き。
