--- a/Novalectro/名詞たち.md
+++ b/Novalectro/名詞たち.md
@@ -2,24 +2,24 @@
 
 ---
 
-# ルクス・グレイ（偽名）
+# ルクス・グレイ
 左足が義足の青年。プラチナブロンドの髪とパープルアイの珍しい容姿のために苦労している。移植用に遺伝子操作した人間を製造するプラント生まれで、子どもの頃に仲間と逃げ出した。
 行方不明の仲間を探して、ノヴァ・レクトロにやってくる。髪は売るために伸ばしている。
 ちゃんとした教育を受けなかったので読み書きが苦手で運動神経はいい。目立つ容姿なのでよくトラブルに巻き込まれるため、若干の人間不信。バイオテクノロジー企業の エステフォルマ は資産であるルクスを回収しようと探している。もともと要人の心臓移植のために作られたので、遺伝子とかがそれに適合するようになっている。髪と目はついでというか、臓器以外にも性能のいいパーツを作るのはプラントとしては一般的。義足にナイフを仕込んでいる。
 
-# シャルル・オギノ（偽名）
+# ジュール・オギノ
 サイバネティクス企業、 Limb tech に所属するエンジニア。パンクファッションを好み、黒髪のボブに大きなピアスをつけている。耳と舌にあいてる。自社製品の汎用AI「パスカル」の試作をテストしている。
 アダプタ式の付け替え可能な義足（両足）、肝臓（半分くらい機械）、胸と子宮切除済（軽量化）、右手にリグ操作のためのコントロールデバイスを埋め込んでいる（ピアスのように表面から凹凸や金属パーツが見える）。ノンバイナリーのアロマアセク。機械が好きで、人間にはあまり興味がない。両足が義足のために脚力が非常に強く足も早い。
 香水が好きなので胴体と両腕は生身。
-シャルルはクーロン。荻野は近代日本最初の女性医師から。
+エネルギー単位のジュールと、荻野は近代日本最初の女性医師から。
 
 #　凪　ナギ
-野良のデジタルハッカー。シャルとは友人。
+野良のデジタルハッカー。ジュールとは友人。
 電子機器に囲まれた部屋に住んでおり、外に出てくることはほぼない。
 
 # 警官　葉山さん　ミナト　湊　37歳　
-繁華街の管轄の警官。シャルのことが密かに好き。
-シャルの顔なじみで、なぜかお互い個人の連絡先を知っている。シャルには都合の良い人間としか見られていないが、諦めきれてない。
+繁華街の管轄の警官。ジュールのことが密かに好き。
+ジュールの顔なじみで、なぜかお互い個人の連絡先を知っている。ジュールには都合の良い人間としか見られていないが、諦めきれてない。
 
 ルクスの友達
 エルグ、レム
@@ -30,7 +30,7 @@ SynthBliss シンスブリス
 （この設定は使うか未定）
 
 # Limb tech（リムテック）
-シャルが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟と人間の可能性を拡張することを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。もともとあった自動車メーカーの子会社だったものが独立して成長した。
+ジュールが所属しているサイバネティクス企業。義肢の製造、販売やそれを操作するためのシステム開発を行っている。文明の成熟と人間の可能性を拡張することを理念として掲げており、宇宙開発や汎用AI事業など手広く行う大企業。もともとあった自動車メーカーの子会社だったものが独立して成長した。
 
 # AestheForma Industries（エステフォルマ工業）
 バイオテクノロジー企業の目的は純粋に資本である。安全で高品質な移植技術と生体パーツ販売のネットワークを持っている。
