--- a/Novalectro/名詞たち.md
+++ b/Novalectro/名詞たち.md
@@ -44,7 +44,7 @@ SynthBliss シンスブリス
 30年ほど前にプラントが大量に人間を作ったために、遺伝子操作された身寄りのない貧困層が爆発的に増加。世界の各地は住処のない人々を移民として迎え入れたが、多様性を受け入れられない人々によって反対運動が起こり結果的に彼らはノヴァ・レクトロの隅に住み着き、手足や目や臓器を売って生活するようになる。
 
 
-## Cobalt Spire 単に、コバルトエリア
+## Cobalt Spire コバルトスパイア
 ノヴァ・レクトロの中でも富裕層が住むエリア。中央に富裕層の居住とオフィスが立ち並ぶ世界有数の都市。
 
 ## Ash Quater 灰色区画
@@ -54,10 +54,14 @@ SynthBliss シンスブリス
 最も多くの住民がいる、広いエリア。コバルトを囲むように広がっている。
 
 # 個人用携帯端末: リグ rig 
-ウェアラブルな通信端末。ほとんどの人間が持っている。個人情報…の認証は政府のサーバが保管しているから身一つで支払いしたり車を運転したりできる。安価なものから人体に埋め込む高価なタイプまで色々。クラウドで処理するものがほとんどなので本体に対して処理能力はないため、軽量で安価。
+ウェアラブルな通信端末。ほとんどの人間が持っている。個人情報…の認証は政府のサーバが保管しているから身一つで支払いしたり車を運転したりできる。安価なものから人体に埋め込む高価なタイプまで色々。クラウドで処理するものがほとんどなので本体にそれほど処理能力はないため、軽量で安価。
 基本的に音声インターフェースなのでディスプレイは最低限。ディスプレイタイプも選べる。
 街の中には至るところに公衆ディスプレイが存在している。カフェにはディスプレイのレンタルがあることが多い（ディスプレイ単体の場所もある）。割と一般的なビジネス。
 
 # プラント
 遺伝子操作した人間を製造する養殖所。ここで作られた人間は臓器移植に使われたり、運がよければ養子にされたりする。ほとんど移植用に売られる。売るためだけに人間を生産しているアングラ企業。正式名称は色々あるが、総称してプラントと呼ばれる。
 遺伝子操作技術には秀でており、様々な条件に応じた遺伝子情報を保存している大企業でもある。ノヴァレクトロからは離れた土地に工場がある。30年前に大量に人間を生産しすぎて問題になり、今ではかなり制限されている（表向き）。裏向きでは変わらず大量生産し、地方で育成して富裕層向け生体パーツとして出荷している。性能は折り紙付き。
+
+# ジーンgene
+遺伝子情報のこと
+主に天然の容姿を指す。
